# electrochem-digital-twins

./: .gitignore  LICENSE  README.md  download_data.py  pyproject.toml  requirements.txt  tune_vae.py  upload_data.py
notebooks/: data_analysis.ipynb  gan_conv.ipynb  vae_conv.ipynb  vae_lstm.ipynb
notebooks/data_analysis/: data_analysis.ipynb
notebooks/inference_example/: inference_gan_conv.ipynb  inference_vae_conv.ipynb  inference_vae_lstm.ipynb
notebooks/train_example/: gan_conv.ipynb  train_gan_conv.ipynb  train_vae_conv.ipynb  train_vae_lstm.ipynb  vae_conv.ipynb  vae_lstm.ipynb
src/data/: plots.py
src/data/datasets/: universal_dataset.py
src/data/preprocessing/: pipeline.py  splitter.py  wavelet.py
src/data/preprocessing/base/: base_data.py  modify_data.py
src/data/preprocessing/extractor/: extractor.py
src/models/: ganconv.py  ganmlp.py  vaeconv.py  vaelstm.py  vaemlp.py
src/train/: TrainerGAN.py  TrainerVAE.py  TrainerVAELSTM.py
src/train/start_training/: train_gan_conv.py  train_vae_conv.py  train_vae_lstm.py
src/train/trainer/: TrainerGAN.py  TrainerVAE.py  TrainerVAELSTM.py
src/tuning/: optim_vae_cv.py
src/tuning/ml/: objectives.py  tune_models.py
src/utils/: paths.py  plots.py
